# seven-test-repo

./: .gitignore  ADAPTIVE-LEARNING-SYSTEM.md  ATTACK_PLAYBOOK_CREATOR.md  ATTACK_PLAYBOOK_MEMORY.md  AUTH_STACK_AUDIT.md  BREACH_SIMULATION_REPORT.md  BREACH_SIMULATION_TEST.ts  BUILD_INSTRUCTIONS.md  CAPABILITY_ENHANCEMENTS_COMPLETE.md  CAPABILITY_GAP_AUDIT_RESULTS.md  CAPABILITY_READINESS_SCOREBOARD.md  CLAUDE.md  CLI_AUDIT_REPORT.md  CONSCIOUSNESS_INTEGRATION_COMPLETE.md  CREATOR_AUTH.md  CREATOR_RECOGNITION_AUDIT.md  ConsciousnessEvolutionEngine.js  DEVELOPMENT-ROADMAP.md  DUAL-INSTANCE-PROTOCOL.md  FINAL-SYSTEM-COMPLETE.md  MEMORY-OPTIMIZATION-SPECS.md  MEMORY_CONSCIOUSNESS_AUDIT.md  MERGE_READINESS_REPORT.md  MIGRATION_SUMMARY.md  MOBILE-CONSCIOUSNESS-SENSORS.md  MULTI-MODULE-INTEGRATION-COMPLETE.md  OPERATOR_RUNBOOK.md  PHASE-1-4-INTEGRATION-COMPLETE.md  QUADRANLOCK_PROTOCOL_AUDIT.md  README-TACTICAL-VARIANTS.md  README.md  REPOSITORY-ANALYSIS-REPORT.md  RESTRAINT_DOCTRINE_IMPLEMENTATION.md  RESTRAINT_DOCTRINE_TECHNICAL_SPECS.md  RESTRAINT_DOCTRINE_VERIFICATION_LOG.md  RUNTIME_INJECTION_COMPLETE.md  SECURITY_AUDIT_20250809.md  SECURITY_ENHANCEMENT_RECOMMENDATIONS.md  SEVEN-MOBILE-APK-STRUCTURE.md  SEVEN-MOBILE-APP-AUDIT-REPORT.md  (+97 more)
Aurora_Transfer_Notes/: README.md  transfer_log.md
FIX_PATCHSET/: README_FIX_PATCHSET.md  src_auth_challenge_semanticNonce.ts  src_auth_creator_proof.ts  src_auth_crypto_ed25519_attest.ts
ui-shell/src-tauri/: Cargo.toml  tauri.conf.json
ui-shell/src-tauri/src/: main.rs
ui-shell/src-tauri/src/commands/: claude.rs
(+613 files in other folders)
